@@ -1,3 +1,7 @@
+## 0.x.x / 2019-xx-xx
+
+* [ENHANCEMENT] Make the label names of Prometheus recorder configurable.
+
 ## 0.1.0 / 2019-03-18
 
 * [FEATURE] Add gorestful compatible middleware.
